Cleanup attributions of sounds