@@ -7,7 +7,7 @@ import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 
 /**
- * Can't believe there isn't a toString() override on this sucker
+ * Can't believe there isn't a toString() override
  */
 @Mixin(SoundEvent.class)
 public class MixinSoundEvent {
@@ -15,8 +15,14 @@ public class MixinSoundEvent {
     @Shadow
     @Final
     private ResourceLocation location;
+    @Shadow
+    @Final
+    private float range;
+    @Shadow
+    @Final
+    private boolean newSystem;
 
     public String toString() {
-        return String.format("SoundEvent[%s]", this.location.toString());
+        return "%s{newSystem %s, range %f}".formatted(this.location.toString(), Boolean.toString(this.newSystem), this.range);
     }
 }
